# fracdiff-modern

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: ci.yml  doc.yml
_modules/: index.html
_modules/fracdiff/: fdiff.html
_modules/fracdiff/sklearn/: fracdiff.html  fracdiffstat.html
_modules/fracdiff/torch/: functional.html  module.html
_sources/: index.rst.txt
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
src/fracdiff/: __init__.py
src/fracdiff/sklearn/: __init__.py  fracdiff.py  fracdiffstat.py  tol.py
src/fracdiff/torch/: __init__.py  functional.py
tests/: test_torch.py
tests/issues/: test_32.py
tests/sklearn/: test_fracdiff.py  test_fracdiffstat.py  test_sklearn.py  test_stat.py  test_tol.py
